--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,6 @@
     <div class="main">
       <div id="emojis"></div>
     </div>
+    <!-- <script src="index.js"></script> -->
   </body>
 </html>
